--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,10 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.8.10'  # Ensures the workflow uses Python 3
+
+    - name: Check Python version
+      run: python3 --version
 
     - name: Install dependencies
       run: |
