--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8.10'  # Ensures the workflow uses Python 3
+        python-version: '3.x'  # Ensures the workflow uses Python 3
 
     - name: Check Python version
       run: python3 --version
