--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         python-version: '3.x'  # Ensures the workflow uses Python 3
 
     - name: Check Python version
-      run: python3 --version
+      run: python --version
 
     - name: Install dependencies
       run: |
